lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/array_get_int_ptr/array_get_int_ptr2/array_get_int_ptr2.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/array_get_int_ptr/array_get_int_ptr2/array_get_int_ptr2.c:34:23: error: use of undeclared identifier 's__a'
    array_get_int_ptr(s__a ,str_k ,q_b__klen );
                      ^
1 error generated.
